--- a/package.json
+++ b/package.json
@@ -17,7 +17,14 @@
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
     "@types/redux-logger": "3.0.9",
+    "@typescript-eslint/eslint-plugin": "^6.8.0",
+    "@typescript-eslint/parser": "^6.8.0",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.51.0",
+    "eslint-plugin-react": "^7.33.2",
+    "postcss": "^8.4.31",
     "redux-logger": "3.0.6",
+    "tailwindcss": "^3.3.3",
     "typescript": "5.1.3"
   }
 }
