--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "1.9.5",
-    "next": "latest",
+    "@tabler/icons-react": "^2.39.0",
+    "axios": "^1.5.1",
+    "next": "^13.5.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-redux": "8.1.0"
+    "react-redux": "8.1.0",
+    "sweetalert2": "^11.7.32"
   },
   "devDependencies": {
+    "@types/mapbox-gl": "^2.7.17",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
@@ -20,8 +24,9 @@
     "@typescript-eslint/eslint-plugin": "^6.8.0",
     "@typescript-eslint/parser": "^6.8.0",
     "autoprefixer": "^10.4.16",
-    "eslint": "^8.51.0",
+    "eslint": "^8.52.0",
     "eslint-plugin-react": "^7.33.2",
+    "mapbox-gl": "^2.15.0",
     "postcss": "^8.4.31",
     "redux-logger": "3.0.6",
     "tailwindcss": "^3.3.3",
