--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "8.1.0",
+    "sharp": "^0.32.6",
     "sweetalert2": "^11.7.32"
   },
   "devDependencies": {
